sexintheuk.com (archived on 2017-06-03)
{
  "alexa_rank": 405855,
  "analysis_subcorpus": true,
  "categories": "personals",
  "char_count": 14845,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 15.93,
  "homepage_snapshot_redirected_domain": "sexintheuk.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170504072020id_/http://sexintheuk.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170504072020id_/http%3A//sexintheuk.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "sexintheuk.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170603234137id_/http%3A//app.sexintheuk.com/help/privacy.cfm",
  "policy_title": "SexInTheUK :: SexInTheUK Member Privacy Policy",
  "policy_url": "app.sexintheuk.com/help/privacy.cfm",
  "sha1": "aa1642812276c6e0d0c4924dd9cf78eb834656a0",
  "simhash": 6844014144226104253,
  "simhash_updated": false,
  "site_hostname": "sexintheuk.com",
  "site_url": "http://sexintheuk.com",
  "smog": 16.45,
  "strict_updated": false,
  "timestamp": "20170603234137",
  "word_count": 2370,
  "year": 2017
}

--- a/s/se/sex/sexintheuk.com.html
+++ b/s/se/sex/sexintheuk.com.html
@@ -1,18 +1,18 @@
-<!--The following is the downloaded HTML source of the sexintheuk.com privacy policy that was archived on 2016-12-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161202210355id_/http%3A//app.sexintheuk.com/help/privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sexintheuk.com privacy policy that was archived on 2017-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170603234137id_/http%3A//app.sexintheuk.com/help/privacy.cfm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><!--<![endif]--><head>
 	
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>SexInTheUK :: SexInTheUK Member Privacy Policy</title>
-	<meta name="robots" content="noindex,nofollow"> <meta content="e1ozE4mnTjGhzYT4zoLsbLzWJxQTVl3BE5s1mHR8D4Y=" name="csrf-token"> 
+	<meta name="robots" content="noindex,nofollow"> <meta content="9beEXukFYvA/0k+Dr3EgHzIbzJuhlY7gYn4OttR9C8c=" name="csrf-token"> 
 
 	
-	<link rel="stylesheet" type="text/css" media="all" href="http://s.wldcdn.net/assets/template/premium/styles/sites/28888/core-D0ADF883A12440018DF6B4B84FF7CFE7.css">
+	<link rel="stylesheet" type="text/css" media="all" href="http://s.wldcdn.net/assets/template/premium/styles/sites/28888/core-BB3475537D712DA3F0DCB38F3F690707.css">
 
 	
 
-	<link rel="stylesheet" type="text/css" media="all" href="http://s.wldcdn.net/assets/template/premium/styles/sites/28888/theme-525496029DB021D47452A426FD7692F2.css">
+	<link rel="stylesheet" type="text/css" media="all" href="http://s.wldcdn.net/assets/template/premium/styles/sites/28888/theme-0A7A66DFAFA773153D472F70D366F41A.css">
 	
 	
 
@@ -429,7 +429,8 @@ if(e)e.parentNode.insertBefore(l,e.nextSibling);
 		<li id="footer-cookie"><a href="/help/cookies.cfm">Cookie Policy</a></li>
 		<li id="footer-charter"><a href="/help/charter.cfm">Customer Charter</a></li>
 		<li id="footer-safety"><a href="/help/safety.cfm">Safety</a></li>
-		<li id="footer-odp"><a href="http://www.onlinedatingprotector.com" target="_blank">Online Dating Protector</a></li>
+		
+			<li id="footer-odp"><a href="http://www.onlinedatingprotector.com" target="_blank">Online Dating Protector</a></li>
 		
 		<li id="footer-contact"><a href="/help/contact.cfm">Contact Us</a></li>
 		
@@ -437,7 +438,7 @@ if(e)e.parentNode.insertBefore(l,e.nextSibling);
 
 	
 	<ul class="footer-nav hnav">
-		<li id="footer-copyright" class="copyright faded">© 2016 All Rights Reserved.</li>
+		<li id="footer-copyright" class="copyright faded">© 2017 All Rights Reserved.</li>
 	</ul>
 </div><!-- #footer -->
 
@@ -448,8 +449,8 @@ if(e)e.parentNode.insertBefore(l,e.nextSibling);
 		
 	<script src="http://s.wldcdn.net/assets/template/premium/scripts/vendor.min.js?9f94ab9f305fc2b67f57f2b643bd0903" type="text/javascript" charset="utf-8"></script>
 	<script src="http://s.wldcdn.net/assets/template/premium/scripts/en_GB.min.js?82ddeac8e54f9a95725d2ffe8252e837" type="text/javascript" charset="utf-8"></script>
-	<script src="http://s.wldcdn.net/assets/template/premium/scripts/wldlib.min.js?89dfd2e9e75507d804ebdce93fe4db9b" type="text/javascript" charset="utf-8"></script>
-	<script src="http://s.wldcdn.net/assets/template/premium/scripts/app.min.js?21c40462ae55b39af29be9f77c8e29f3" type="text/javascript" charset="utf-8"></script>
+	<script src="http://s.wldcdn.net/assets/template/premium/scripts/wldlib.min.js?8c3c37170294d4365fa705b5613d018b" type="text/javascript" charset="utf-8"></script>
+	<script src="http://s.wldcdn.net/assets/template/premium/scripts/app.min.js?d974923a21d5812b1ef1e81a75f5bbbf" type="text/javascript" charset="utf-8"></script>
 
 
 	</div><!-- #js-holder -->
@@ -510,65 +511,28 @@ if(e)e.parentNode.insertBefore(l,e.nextSibling);
 
 	</script>
 
-<noscript><img src="//www.google-analytics.com/__utm.gif?utmwv=4.3&amp;utmn=354337147&amp;utmhn=app.sexintheuk.com&amp;utmsr=-&utmsc=-&utmul=-&utmje=0&utmfl=-&utmdt=-&amp;utmr=&amp;utmp=/noscript&amp;utmac=UA-3965813-20&amp;utmcc=__utma%3D72049162.1411368836.1480712635.1480712635.1480712635.2%3B%2B__utmb%3D72049162%3B%2B__utmc%3D72049162%3B%2B__utmz%3D72049162.1480712635.2.2.utmccn%3D(direct)%7Cutmcsr%3D(direct)%7Cutmcmd%3D(none)%3B%2B__utmv%3D72049162.-%3B" /></noscript> <!-- START GSM IMPRESSION TRACKER -->
+<noscript><img src="//www.google-analytics.com/__utm.gif?utmwv=4.3&amp;utmn=987215369&amp;utmhn=app.sexintheuk.com&amp;utmsr=-&utmsc=-&utmul=-&utmje=0&utmfl=-&utmdt=-&amp;utmr=&amp;utmp=/noscript&amp;utmac=UA-3965813-20&amp;utmcc=__utma%3D83650418.2080735568.1496533297.1496533297.1496533297.2%3B%2B__utmb%3D83650418%3B%2B__utmc%3D83650418%3B%2B__utmz%3D83650418.1496533297.2.2.utmccn%3D(direct)%7Cutmcsr%3D(direct)%7Cutmcmd%3D(none)%3B%2B__utmv%3D83650418.-%3B" /></noscript> <!-- START ADVERTISING FUNCTIONS  -->
 <script type="text/javascript">
 <!--
 (function() {
-	if (typeof _wld_page_id !== 'undefined') {
-		switch (_wld_page_id) {
-			//homepage
-		case 'member-index':
-			document.write("<iframe src='http://5gl1x9qc.com/d/a/3261.php' scrolling='no' border='0' frameborder='0' width='1' height='1'></iframe>");
-			break;
-			//search        
-		case 'member-search-new-index':
-			document.write("<iframe src='http://5gl1x9qc.com/d/a/3256.php' scrolling='no' border='0' frameborder='0' width='1' height='1'></iframe>");
-			break;
-			///diaries
-		case 'member-diaries-index':
-		case 'member-profile-diary-view':
-			document.write("<iframe src='http://5gl1x9qc.com/d/a/3260.php' scrolling='no' border='0' frameborder='0' width='1' height='1'></iframe>");
-			break;
-			//inbox - messages 
-		case 'member-inbox-index':
-		case 'member-inbox-conversation':
-		case 'member-inbox-compose':
-			document.write("<iframe src='http://5gl1x9qc.com/d/a/3259.php' scrolling='no' border='0' frameborder='0' width='1' height='1'></iframe>");
-			break;
-			//favourites 
-		case 'member-my-account-favourites':
-			document.write("<iframe src='http://5gl1x9qc.com/d/a/3257.php' scrolling='no' border='0' frameborder='0' width='1' height='1'></iframe>");
-			break;
-			//whos viewed me
-		case 'member-viewedme-index':
-			document.write("<iframe src='http://5gl1x9qc.com/d/a/3254.php' scrolling='no' border='0' frameborder='0' width='1' height='1'></iframe>");
-			break;
-		case 'member-encounters-index':
-			document.write("<iframe src='http://5gl1x9qc.com/d/a/3258.php' scrolling='no' border='0' frameborder='0' width='1' height='1'></iframe>");
-			break;
-			//profile page
-		case 'member-profile-index':
-			document.write("<iframe src='http://5gl1x9qc.com/d/a/3255.php' scrolling='no' border='0' frameborder='0' width='1' height='1'></iframe>");
-			break;
-			//exclude payment page           
-		case 'member-my-account-payment-mobilepay':
-		case 'member-my-account-payment-index':
-			break;
-		default:
-			document.write("<iframe src='http://5gl1x9qc.com/d/a/3261.php' scrolling='no' border='0' frameborder='0' width='1' height='1'></iframe>");
-		}
+	if (typeof memberMetadata == 'undefined') {
+		var p = 'd';
+	} else {
+		var p = 'm';
 	}
-}());
+	var w = window.intercomSettings.company;
+	var n = w.network;
+	var s = w.id;
+	var a = w.associate_id;
+	var c = document.createElement('script');
+	c.src = '//js.dplads.com/in/wld?p=' + p + '&n=' + n + '&s=' + s + '&a=' + a + '';
+	c.type = "text/javascript";
+	c.async = true;
+	document.body.appendChild(c);
+})();
 -->
-</script><iframe src="http://5gl1x9qc.com/d/a/3261.php" scrolling="no" border="0" frameborder="0" width="1" height="1"></iframe>
-<!-- END GSM IMPRESSION TRACKER -->
-  
-<!-- START ADVERTISING FUNCTIONS  -->
-<script type="text/javascript">
-<!--
-document.write('<scri'+'pt src="//s.wldcdn.net/media/waldo/a/a_functions_min.js?'+Date.now()+'"></'+'script>');
--->
-</script><script src="//s.wldcdn.net/media/waldo/a/a_functions_min.js?1580580877455"></script>
+</script>
+
 <!-- END ADVERTISING FUNCTIONS  -->
 
 <!-- Start DYNAMIC CROSS SELL -->
@@ -581,7 +545,7 @@ script.type = "text/javascript";
 script.async = true;
 document.body.appendChild(script);
 })();
-</script><script src="//sw.wldcdn.net/_img/dxs/desk_min.js?d=1580580877456" type="text/javascript" async=""></script>
+</script><script src="//sw.wldcdn.net/_img/dxs/desk_min.js?d=1580580880660" type="text/javascript" async=""></script>
 <!-- End DYNAMIC CROSS SELL --> 
 
 
