emojipedia.org (archived on 2017-06-03)
{
  "alexa_rank": 2290,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 7708,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 16.66,
  "homepage_snapshot_redirected_domain": "emojipedia.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170331110017id_/http://emojipedia.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170331110017id_/http%3A//emojipedia.org",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "emojipedia.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170603235604id_/http%3A//emojipedia.org/privacy-policy",
  "policy_title": "Privacy Policy",
  "policy_url": "emojipedia.org/privacy-policy",
  "sha1": "d7f00b0269fdd1e48a03d15a08e1f82af64a9685",
  "simhash": 1044751267308432800,
  "simhash_updated": true,
  "site_hostname": "emojipedia.org",
  "site_url": "http://emojipedia.org",
  "smog": 17.73,
  "strict_updated": true,
  "timestamp": "20170603235604",
  "word_count": 1243,
  "year": 2017
}

--- a/e/em/emo/emojipedia.org.html
+++ b/e/em/emo/emojipedia.org.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the emojipedia.org privacy policy that was archived on 2016-11-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161118223215id_/http%3A//emojipedia.org/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the emojipedia.org privacy policy that was archived on 2017-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170603235604id_/http%3A//emojipedia.org/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <title>Privacy Policy</title>
-<link href="/static/css/emojipedia.5146e661821a.css" rel="stylesheet" type="text/css">
+<link href="/static/css/emojipedia.76f0fdbcc16b.css" rel="stylesheet" type="text/css">
 <link rel="apple-touch-icon" sizes="57x57" href="/static/img/favicons/apple-touch-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/static/img/favicons/apple-touch-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/static/img/favicons/apple-touch-icon-72x72.png">
@@ -19,12 +19,30 @@
 <link rel="icon" type="image/png" href="/static/img/favicons/android-chrome-192x192.png" sizes="192x192">
 <link rel="icon" type="image/png" href="/static/img/favicons/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/png" href="/static/img/favicons/favicon-16x16.png" sizes="16x16">
-<link rel="manifest" href="/static/img/favicons/manifest.json">
+<link rel="manifest" href="/manifest.webapp">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-TileImage" content="/static/img/favicons/mstile-144x144.png">
 <meta name="theme-color" content="#ffffff">
 <link rel="mask-icon" mask="" href="/static/img/emojipedia.svg" color="black">
-<script src="https://asset.pagefair.net/ads.min.js"></script><script src="https://asset.pagefair.com/measure.min.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="//s3.buysellads.com/ac/bsa.js"></script></head>
+<script src="https://asset.pagefair.net/ads.min.js"></script><script src="https://asset.pagefair.com/measure.min.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="https://www.googletagservices.com/tag/js/gpt.js"></script>
+<script>var googletag=googletag||{};googletag.cmd=googletag.cmd||[]</script>
+<script>
+var gptAdSlots=[];
+googletag.cmd.push(function() {
+var mapping = googletag.sizeMapping().
+ addSize([0,0], [[320,50], [300,50]]).
+ addSize([800,100], [728,90]).
+ build();
+gptAdSlots[0] = googletag.defineSlot('/221143671/dsk_leaderboard', [[320,50], [728,90]], 'ldb').
+ defineSizeMapping(mapping).
+ addService(googletag.pubads());
+gptAdSlots[1] = googletag.defineSlot('/221143671/mob_mpu', [300,250], 'mpu').
+ addService(googletag.pubads());
+googletag.pubads().enableSingleRequest();
+googletag.enableServices();
+});
+</script>
+<script type="text/javascript" async="" src="//s3.buysellads.com/ac/bsa.js"></script></head>
 <body>
 <script type="text/javascript">
 (function(){
@@ -39,7 +57,10 @@ bsa.src = '//s3.buysellads.com/ac/bsa.js';
 <div class="container">
 <a href="/" class="logo" title="Go to Emojipedia Home">Emojipedia</a>
 <form method="get" action="/search/" class="search-form">
+<label>
+<span class="sr-only">Search Emojipedia:</span>
 <input id="id_q" name="q" placeholder="Search Emojipedia" type="search">
+</label>
 </form>
 <a href="#nav-categories" id="nav-categories-toggle">Categories</a>
 <nav class="categories">
@@ -56,22 +77,15 @@ bsa.src = '//s3.buysellads.com/ac/bsa.js';
 </nav>
 </div>
 </header>
-<div class="sponsor"><p><a href="http://podcast.emojiwrap.com/episodes/53140-4-but-some-people-hated-the-blob"><span class="emoji">🎧</span>&nbsp;Did you know we have an emoji news podcast? It's true.</a></p></div>
+<div class="sponsor"><p><a href="http://emojiwrap.com/"><span class="emoji">💌</span>&nbsp;Subscribe for the latest emoji news</a></p></div>
 <div class="ad-header">
-<script type="text/javascript">
-   google_ad_client = "ca-pub-3417095048576988";
-   width = document.documentElement.clientWidth;
-     google_ad_slot = "9547014904";
-     google_ad_width = 320;
-     google_ad_height = 100;
-     if (width > 728) {
-         google_ad_slot = "9138623707";
-         google_ad_width = 728;
-    google_ad_height = 90;
-     }
-
-  </script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+<div id="ldb">
+<script>
+     googletag.cmd.push(function() {
+       googletag.display('ldb');
+     });
+   </script>
+</div>
 </div>
 <div class="container">
 <div class="content">
@@ -122,23 +136,15 @@ Melbourne, VIC 3000,&nbsp;Australia</p>
 <ul class="emoji-list">
 </ul>
 <div class="ad-footer">
-<div style="text-align:center">
-<script type="text/javascript">
-		    google_ad_client = "ca-pub-3417095048576988";
-		    width = document.documentElement.clientWidth;
-		    google_ad_slot = "7111864505";
-		    google_ad_width = 300;
-		    google_ad_height = 250;
-		    if (width > 380) {
-		        google_ad_slot = "8262920107";
-		        google_ad_width = 336;
-		       google_ad_height = 280;
-		    }
- 
-		</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-		</script>
+<center>
+<div id="mpu">
+<script>
+     googletag.cmd.push(function() {
+       googletag.display('mpu');
+     });
+   </script>
 </div>
+</center>
 </div>
 </div>
 <div class="sidebar">
@@ -158,28 +164,28 @@ Melbourne, VIC 3000,&nbsp;Australia</p>
 <div class="block">
 <h2>Most Popular</h2>
 <ul>
-<li><a href="/shrug/"><span class="emoji">🤷</span> Shrug</a></li>
+<li><a href="/shrug/"><span class="emoji">🤷</span> Person Shrugging</a></li>
 <li><a href="/face-with-tears-of-joy/"><span class="emoji">😂</span> Face With Tears of Joy</a></li>
-<li><a href="/heavy-black-heart/"><span class="emoji">❤</span> Heavy Black Heart</a></li>
-<li><a href="/smiling-face-with-heart-shaped-eyes/"><span class="emoji">😍</span> Smiling Face With Heart-Shaped Eyes</a></li>
+<li><a href="/heavy-black-heart/"><span class="emoji">❤</span> Red Heart</a></li>
+<li><a href="/smiling-face-with-heart-shaped-eyes/"><span class="emoji">😍</span> Smiling Face With Heart-Eyes</a></li>
 <li><a href="/smiling-face-with-smiling-eyes/"><span class="emoji">😊</span> Smiling Face With Smiling Eyes</a></li>
+<li><a href="/thinking-face/"><span class="emoji">🤔</span> Thinking Face</a></li>
 <li><a href="/fire/"><span class="emoji">🔥</span> Fire</a></li>
-<li><a href="/face-throwing-a-kiss/"><span class="emoji">😘</span> Face Throwing a Kiss</a></li>
-<li><a href="/smirking-face/"><span class="emoji">😏</span> Smirking Face</a></li>
+<li><a href="/face-throwing-a-kiss/"><span class="emoji">😘</span> Face Blowing a Kiss</a></li>
 <li><a href="/face-with-rolling-eyes/"><span class="emoji">🙄</span> Face With Rolling Eyes</a></li>
 </ul>
 </div>
 <div class="block">
 <h2>Latest News</h2>
 <ul>
-<li><a href="http://blog.emojipedia.org/proposals-for-shaka-and-west-coast-hand/"><span class="emoji">🤙</span> Proposals for Shaka and West Coast Hand</a></li>
-<li><a href="http://blog.emojipedia.org/but-some-people-hated-the-blob/"><span class="emoji">🙅</span> But Some People Hated The Blob</a></li>
-<li><a href="http://blog.emojipedia.org/emoji-music-video/"><span class="emoji">🎶</span> Emoji Music Video</a></li>
-<li><a href="http://blog.emojipedia.org/changes-to-unicode-emoji-glyphs/"><span class="emoji">✏️</span> Changes to Unicode Emoji Glyphs</a></li>
-<li><a href="http://blog.emojipedia.org/adopt-your-emoji-at-unicode/"><span class="emoji">💝</span> Adopt Your Emoji At Unicode</a></li>
-<li><a href="http://blog.emojipedia.org/giraffe-pretzel-vampire-emojis-for-2017/"><span class="emoji">🆕</span>&nbsp;Giraffe, Pretzel, Vampire Emojis for 2017</a></li>
-<li><a href="http://blog.emojipedia.org/ios-10-2-emoji-first-look-shrug-fingers-crossed-face-palm/"><span class="emoji">🙌</span> iOS 10.2 Emoji First Look: Shrug, Fingers Crossed, Face Palm</a></li>
-<li><a href="http://blog.emojipedia.org/happy-halloween-zombie-emoji-coming-to-eat-your-brains/"><span class="emoji">🕷</span>Happy Halloween! Zombie Emoji Coming To Eat your Brains.</a></li>
+<li><a href="http://blog.emojipedia.org/us-state-flag-emojis-now-possible/"><span class="emoji">🇺🇸</span> US State Flag Emojis Now Possible</a></li>
+<li><a href="http://blog.emojipedia.org/custom-emojis-come-to-ios/"><span class="emoji">📲</span> Custom Emojis Arrive on iOS</a></li>
+<li><a href="http://blog.emojipedia.org/twemoji-2-3-emoji-changelog/"><span class="emoji">💻</span> Twemoji 2.3 Emoji Changelog</a></li>
+<li><a href="http://blog.emojipedia.org/emoji-trends-are-here/"><span class="emoji">📈</span> Emoji Trends Are Here</a></li>
+<li><a href="http://blog.emojipedia.org/rip-blobs-google-redesigns-emojis/"><span class="emoji">⚰️</span> RIP Blobs: Google Redesigns Emojis</a></li>
+<li><a href="http://blog.emojipedia.org/science-planets-curly-hair-on-unicode-agenda/"><span class="emoji">👩‍🔬</span> Science, Planets, Curly Hair on Unicode Agenda</a></li>
+<li><a href="http://blog.emojipedia.org/samsung-puts-japan-back-on-the-map/"><span class="emoji">🗾</span> Samsung Puts Japan Back On The Map</a></li>
+<li><a href="http://blog.emojipedia.org/unicode-behind-the-curtain/"><span class="emoji">👥</span> Unicode: Behind the Curtain</a></li>
 </ul>
 </div>
 <div class="block">
@@ -234,18 +240,20 @@ Melbourne, VIC 3000,&nbsp;Australia</p>
 <ul>
 <li><a href="/apple/">Apple</a></li>
 <li><a href="/emojidex/">emojidex</a></li>
-<li><a href="/emoji-one/">Emoji One</a></li>
+<li><a href="/emoji-one/">EmojiOne</a></li>
 <li><a href="/emojipedia/">Emojipedia</a></li>
 <li><a href="/facebook/">Facebook</a></li>
 <li><a href="/google/">Google</a></li>
 <li><a href="/htc/">HTC</a></li>
 <li><a href="/instagram/">Instagram</a></li>
 <li><a href="/lg/">LG</a></li>
+<li><a href="/messenger/">Messenger</a></li>
 <li><a href="/microsoft/">Microsoft</a></li>
 <li><a href="/mozilla/">Mozilla</a></li>
 <li><a href="/samsung/">Samsung</a></li>
 <li><a href="/slack/">Slack</a></li>
 <li><a href="/snapchat/">Snapchat</a></li>
+<li><a href="/sponsored/">Sponsored</a></li>
 <li><a href="/telegram/">Telegram</a></li>
 <li><a href="/twitter/">Twitter</a></li>
 <li><a href="/viber/">Viber</a></li>
@@ -254,8 +262,18 @@ Melbourne, VIC 3000,&nbsp;Australia</p>
 </ul>
 </div>
 <div class="unicode-version">
+<h2>Emoji Versions</h2>
+<ul>
+<li><a href="/emoji-6.0/">Emoji 6.0</a></li>
+<li><a href="/emoji-5.0/">Emoji 5.0</a></li>
+<li><a href="/emoji-4.0/">Emoji 4.0</a></li>
+<li><a href="/emoji-3.0/">Emoji 3.0</a></li>
+<li><a href="/emoji-2.0/">Emoji 2.0</a></li>
+<li><a href="/emoji-1.0/">Emoji 1.0</a></li>
+</ul>
 <h2>Unicode Versions</h2>
 <ul>
+<li><a href="/unicode-11.0/">Unicode 11.0</a></li>
 <li><a href="/unicode-10.0/">Unicode 10.0</a></li>
 <li><a href="/unicode-9.0/">Unicode 9.0</a></li>
 <li><a href="/unicode-8.0/">Unicode 8.0</a></li>
@@ -267,6 +285,7 @@ Melbourne, VIC 3000,&nbsp;Australia</p>
 <li><a href="/unicode-4.1/">Unicode 4.1</a></li>
 <li><a href="/unicode-4.0/">Unicode 4.0</a></li>
 <li><a href="/unicode-3.2/">Unicode 3.2</a></li>
+<li><a href="/unicode-3.1/">Unicode 3.1</a></li>
 <li><a href="/unicode-3.0/">Unicode 3.0</a></li>
 <li><a href="/unicode-1.1/">Unicode 1.1</a></li>
 </ul>
@@ -275,7 +294,7 @@ Melbourne, VIC 3000,&nbsp;Australia</p>
 <h2>More</h2>
 <ul>
 <li><a href="/adopt-emoji-faq/">Adopt An Emoji FAQ</a></li>
-<li><a href="/advertising/">Advertising</a></li>
+<li><a href="/ads/">Ads</a></li>
 <li><a href="/apple-watch/">Apple Watch</a></li>
 <li><a href="/botmoji/">Botmoji</a></li>
 <li><a href="/contact/">Contact</a></li>
@@ -292,20 +311,20 @@ Melbourne, VIC 3000,&nbsp;Australia</p>
 <li><a href="/licensing/">Licensing</a></li>
 <li><a href="/new/">New</a></li>
 <li><a href="/privacy-policy/">Privacy Policy</a></li>
+<li><a href="/subdivision-flags/">Subdivision Flags</a></li>
 <li><a href="/tips/">Tips</a></li>
-<li><a href="/zero-width-joiner/">Zero Width Joiner</a></li>
 <li><a href="/modifiers/">Modifiers</a></li>
 </ul>
 </div>
 </div>
 </nav>
 <div class="container content">
-<p>All emoji names&nbsp;are&nbsp;<a href="/faq/">official character names</a>&nbsp;and <a href="/emoji/" title="😃 Every Emoji by Codepoint">codepoints</a> as part of the <a href="https://en.wikipedia.org/wiki/Unicode_Standard">Unicode Standard</a>. Additional descriptions are copyright&nbsp;© Emojipedia.&nbsp;Emoji character artwork and copyright belong to their respective font creators.</p>
-<p>Emojipedia® is a registered trademark of Emojipedia Pty Ltd;&nbsp;Apple® is a registered trademark of Apple Inc; Microsoft® and Windows® are registered trademarks of Microsoft Corporation; Google® and Android™ are registered trademarks or trademarks of Google Inc in the United States and/or other countries. Emoji One images provided free by Emoji One.</p>
+<p>All emoji names&nbsp;are&nbsp;<a href="/faq/">official character and/or CLDR names</a>&nbsp;and <a href="/emoji/" title="😃 Every Emoji by Codepoint">code points</a>, listed as part of the <a href="https://en.wikipedia.org/wiki/Unicode_Standard">Unicode Standard</a>. Additional descriptions are copyright&nbsp;© Emojipedia.&nbsp;Emoji character artwork and copyright belong to their respective creators.</p>
+<p>Emojipedia® is a registered trademark of Emojipedia Pty Ltd;&nbsp;Apple® is a registered trademark of Apple Inc; Microsoft® and Windows® are registered trademarks of Microsoft Corporation; Google® and Android™ are registered trademarks or trademarks of Google Inc in the United States and/or other countries. EmojiOne™ images provided by EmojiOne.</p>
 </div>
 </footer>
-<script src="/static/components/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="/static/js/site.8aa77f25f93b.js" charset="utf-8"></script>
+<script type="text/javascript" src="/static/js/jquery.min.d72a6941a827.js" charset="utf-8"></script>
+<script type="text/javascript" src="/static/js/site.72918f0d239b.js" charset="utf-8"></script>
 <script>
 (function() {
 function async_load(script_url){
