funapps.io (archived on 2017-06-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 6967,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.36,
  "homepage_snapshot_redirected_domain": "funapps.io",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170504024445id_/http://www.funapps.io/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170504024445id_/http%3A//funapps.io",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "funapps.io",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170604022007id_/http%3A//www.funapps.io/privacy_policy.php",
  "policy_title": "Privacy Policy - funapps.io - The Apps Designed for Your Entertainment",
  "policy_url": "funapps.io/privacy_policy.php",
  "sha1": "4de556d8df2f7021b4d5fcc9f575d54db528ca62",
  "simhash": 2082606763749919841,
  "simhash_updated": false,
  "site_hostname": "funapps.io",
  "site_url": "http://funapps.io",
  "smog": 14.22,
  "strict_updated": false,
  "timestamp": "20170604022007",
  "word_count": 1149,
  "year": 2017
}

--- a/f/fu/fun/funapps.io.html
+++ b/f/fu/fun/funapps.io.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the funapps.io privacy policy that was archived on 2016-11-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161121055854id_/http%3A//www.funapps.io/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the funapps.io privacy policy that was archived on 2017-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170604022007id_/http%3A//www.funapps.io/privacy_policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
@@ -19,7 +19,7 @@
     <link href="http://static.funapps.io/templates/leechi/css/responsive.css" rel="stylesheet" type="text/css">
     <!-- Font Awesome CSS-->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//connect.facebook.net/en_US/fbds.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.3&amp;appId=807022082722878"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=088620b277/cloudflare.min.js"></script><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script async="" src="//connect.facebook.net/en_US/fbds.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.3&amp;appId=807022082722878"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=85b614c0f6/cloudflare.min.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://static.js.funapps.io/templates/leechi/js/jquery.magnific-popup.js"></script> 
     <link rel="stylesheet" href="http://static.css.funapps.io/templates/leechi/css/magnific-popup.css">
 <script type="text/javascript" src="http://static.js.funapps.io/templates/leechi/zero_copy_script/ZeroClipboard.js"></script>
@@ -170,7 +170,10 @@ found to be incorrect.</p>
 
 <script type="text/javascript">
 //<![CDATA[
-try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok3v=1613a3a185/"},atok:"08e794aeb08d2afd81ba038c86275c77",petok:"5bcef8c2ca480b8e2a84d8a48f394ecd414089f9-1479707934-1800",zone:"funapps.io",rocket:"0",apps:{"ga_key":{"ua":"UA-18114182-15","ga_bs":"2"}}}];!function(a,b){a=document.createElement("script"),b=document.getElementsByTagName("script")[0],a.async=!0,a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=088620b277/cloudflare.min.js",b.parentNode.insertBefore(a,b)}()}}catch(e){};
+var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-18114182-15']);_gaq.push(['_trackPageview']);(function() {var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();(function(b){(function(a){"__CF"in b&&"DJS"in b.__CF?b.__CF.DJS.push(a):"addEventListener"in b?b.addEventListener("load",a,!1):b.attachEvent("onload",a)})(function(){"FB"in b&&"Event"in FB&&"subscribe"in FB.Event&&(FB.Event.subscribe("edge.create",function(a){_gaq.push(["_trackSocial","facebook","like",a])}),FB.Event.subscribe("edge.remove",function(a){_gaq.push(["_trackSocial","facebook","unlike",a])}),FB.Event.subscribe("message.send",function(a){_gaq.push(["_trackSocial","facebook","send",a])}));"twttr"in b&&"events"in twttr&&"bind"in twttr.events&&twttr.events.bind("tweet",function(a){if(a){var b;if(a.target&&a.target.nodeName=="IFRAME")a:{if(a=a.target.src){a=a.split("#")[0].match(/[^?=&]+=([^&]*)?/g);b=0;for(var c;c=a[b];++b)if(c.indexOf("url")===0){b=unescape(c.split("=")[1]);break a}}b=void 0}_gaq.push(["_trackSocial","twitter","tweet",b])}})})})(window);//]]>
+</script><script type="text/javascript">
+//<![CDATA[
+try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok3v=1613a3a185/"},atok:"d730f16bbb87a66b8943001d05f1aa01",petok:"6a8ba810d77986c77b2012961df2b0f00b70082b-1496542807-1800",zone:"funapps.io",rocket:"0",apps:{"ga_key":{"ua":"UA-18114182-15","ga_bs":"2"}}}];!function(a,b){a=document.createElement("script"),b=document.getElementsByTagName("script")[0],a.async=!0,a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=85b614c0f6/cloudflare.min.js",b.parentNode.insertBefore(a,b)}()}}catch(e){};
 //]]>
 </script>
 <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&amp;render=explicit" async="" defer="">
@@ -213,21 +216,6 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
 <!-- This site is converting visitors into subscribers and customers with OptinMonster - http://optinmonster.com --><div id="om-hrzvadcjxnw5182q-holder"></div><script>var hrzvadcjxnw5182q,hrzvadcjxnw5182q_poll=function(){var r=0;return function(n,l){clearInterval(r),r=setInterval(n,l)}}();!function(e,t,n){if(e.getElementById(n)){hrzvadcjxnw5182q_poll(function(){if(window['om_loaded']){if(!hrzvadcjxnw5182q){hrzvadcjxnw5182q=new OptinMonsterApp();return hrzvadcjxnw5182q.init({u:"9374.188329",staging:0});}}},25);return;}var d=false,o=e.createElement(t);o.id=n,o.src="//a.optinmonster.com/app/js/api.min.js",o.onload=o.onreadystatechange=function(){if(!d){if(!this.readyState||this.readyState==="loaded"||this.readyState==="complete"){try{d=om_loaded=true;hrzvadcjxnw5182q=new OptinMonsterApp();hrzvadcjxnw5182q.init({u:"9374.188329",staging:0});o.onload=o.onreadystatechange=null;}catch(t){}}}};(document.getElementsByTagName("head")[0]||document.documentElement).appendChild(o)}(document,"script","omapi-script");</script><!-- / OptinMonster -->
 
 
-<script type="text/javascript">
-/* <![CDATA[ */
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-18114182-15']);
-_gaq.push(['_trackPageview']);
-
-(function() {
-var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
-
-(function(b){(function(a){"__CF"in b&&"DJS"in b.__CF?b.__CF.DJS.push(a):"addEventListener"in b?b.addEventListener("load",a,!1):b.attachEvent("onload",a)})(function(){"FB"in b&&"Event"in FB&&"subscribe"in FB.Event&&(FB.Event.subscribe("edge.create",function(a){_gaq.push(["_trackSocial","facebook","like",a])}),FB.Event.subscribe("edge.remove",function(a){_gaq.push(["_trackSocial","facebook","unlike",a])}),FB.Event.subscribe("message.send",function(a){_gaq.push(["_trackSocial","facebook","send",a])}));"twttr"in b&&"events"in twttr&&"bind"in twttr.events&&twttr.events.bind("tweet",function(a){if(a){var b;if(a.target&&a.target.nodeName=="IFRAME")a:{if(a=a.target.src){a=a.split("#")[0].match(/[^?=&]+=([^&]*)?/g);b=0;for(var c;c=a[b];++b)if(c.indexOf("url")===0){b=unescape(c.split("=")[1]);break a}}b=void 0}_gaq.push(["_trackSocial","twitter","tweet",b])}})})})(window);
-/* ]]> */
-</script>
 
 
 
