--- a/p/pa/pan/paniniamerica.net.html
+++ b/p/pa/pan/paniniamerica.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the paniniamerica.net privacy policy that was archived on 2016-11-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161118235633id_/http%3A//paniniamerica.net/privacyStatement.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the paniniamerica.net privacy policy that was archived on 2017-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170604031142id_/http%3A//www.paniniamerica.net/privacyStatement.cfm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 <link rel="shortcut icon" href="/favicon.ico">
@@ -69,7 +69,7 @@ function MM_preloadImages() { //v3.0
 		</tr>
 		
 		<tr>
-			<td align="center" bgcolor="#000000"><a href="/"><img src="/images/header_nav_home.gif" border="0"></a><img src="/images/header_nav_divider.gif"><a href="http://store.paniniamerica.net/" target="_blank"><img src="/images/header_nav_store.gif" border="0"></a><img src="/images/header_nav_divider.gif"><a href="/pis/"><img src="/images/header_nav_products.gif" border="0"></a><img src="/images/header_nav_divider.gif"><a href="/checklists.cfm"><img src="/images/header_nav_checklists.gif" border="0"></a><img src="/images/header_nav_divider.gif"><a href="/CustServ"><img src="/images/header_nav_acct.gif" border="0"></a><img src="/images/header_nav_divider.gif"><a href="/faq.cfm"><img src="/images/header_nav_support.gif" border="0"></a><img src="/images/header_nav_divider.gif"><a href="http://store.paniniamerica.net/store_locator.html" target="_blank"><img src="/images/header_nav_storelocator.gif" border="0"></a><img src="/images/header_nav_divider.gif"><a href="http://www.paniniauthentic.com/" target="_blank"><img src="/images/header_nav_paniniauthentic.gif" border="0"></a><img src="/images/header_nav_divider.gif"><a href="http://www.paninigroup.com/" target="_blank"><img src="/images/header_nav_PaniniGroup.gif" border="0"></a></td>
+			<td align="center" bgcolor="#000000"><a href="/"><img src="/images/header_nav_home.gif" border="0"></a><img src="/images/header_nav_divider.gif"><a href="http://store.paniniamerica.net/" target="_blank"><img src="/images/header_nav_store.gif" border="0"></a><img src="/images/header_nav_divider.gif"><a href="/pis/"><img src="/images/header_nav_products.gif" border="0"></a><img src="/images/header_nav_divider.gif"><a href="/checklists.cfm"><img src="/images/header_nav_checklists.gif" border="0"></a><img src="/images/header_nav_divider.gif"><a href="/CustServ"><img src="/images/header_nav_acct.gif" border="0"></a><img src="/images/header_nav_divider.gif"><a href="/faq.cfm"><img src="/images/header_nav_support.gif" border="0"></a><img src="/images/header_nav_divider.gif"><a href="http://www.paninigroup.com/" target="_blank"><img src="/images/header_nav_PaniniGroup.gif" border="0"></a></td>
 		</tr>
 	</tbody></table>
 </div>
@@ -232,7 +232,7 @@ If you would like to know more about COPPA, please visit the Federal Trade Commi
 
 <p>&nbsp;</p>
 
-	<p align="center"><a href="/index.cfm">Home</a> | <a href="/news.cfm">News</a> | <a href="/PIS/">Products</a> | <a href="/checklists.cfm">Checklists</a> | <a href="https://exchange-paniniamerica.net/" target="_blank">Claim Rewards</a> | <a href="/FAQ.cfm">Customer Support</a> | <a href="/authentication.cfm">Authentication</a> | <a href="/CustServ/desktop.cfm?page=new-case&amp;ct=3">Redeem a Redemption</a>  <br> <a href="http://www.paninionline.com/collectibles/institutional/ea/USA/missing_stickers.asp?strGruppoLettere=undefined" target="_blank">Missing Stickers (USA)</a> | <a href="http://www.paninionline.com/collectibles/institutional/bt/ca/missing_stickers.asp?strGruppoLettere=undefined" target="_blank">Missing Stickers (English Canada)</a> | <a href="http://www.paninionline.com/collectibles/institutional/fr/ca/missing_stickers.asp?strGruppoLettere=undefined" target="_blank">Missing Stickers (French Canada)</a> <br> <a href="http://store.paniniamerica.net/store_locator.html" target="_blank">Store Locator</a> |  <a href="/GeneralConformityCert.cfm">General Conformity Certificates</a> <br> <a href="/authorizeddealer.cfm">Dealer Application</a> | <a href="/privacyStatement.cfm">Privacy Statement</a> | <a href="/careers.cfm">Careers</a> | <a href="/contactus.cfm">Contact Us</a> | <a href="/sitemap.cfm">Site Map</a></p>	
+	<p align="center"><a href="/index.cfm">Home</a> | <a href="/news.cfm">News</a> | <a href="/PIS/">Products</a> | <a href="/checklists.cfm">Checklists</a> | <a href="https://exchange-paniniamerica.net/" target="_blank">Claim Rewards</a> | <a href="/FAQ.cfm">Customer Support</a> | <a href="/authentication.cfm">Authentication</a> | <a href="/CustServ/desktop.cfm?page=new-case&amp;ct=3">Redeem a Redemption</a>  <br> <a href="http://www.paninionline.com/collectibles/institutional/ea/USA/missing_stickers.asp?strGruppoLettere=undefined" target="_blank">Missing Stickers (USA)</a> | <a href="http://www.paninionline.com/collectibles/institutional/bt/ca/missing_stickers.asp?strGruppoLettere=undefined" target="_blank">Missing Stickers (English Canada)</a> | <a href="http://www.paninionline.com/collectibles/institutional/fr/ca/missing_stickers.asp?strGruppoLettere=undefined" target="_blank">Missing Stickers (French Canada)</a> <br>   <a href="/GeneralConformityCert.cfm">General Conformity Certificates</a> <br> <a href="/authorizeddealer.cfm">Dealer Application</a> | <a href="/privacyStatement.cfm">Privacy Statement</a> | <a href="/careers.cfm">Careers</a> | <a href="/contactus.cfm">Contact Us</a> | <a href="/sitemap.cfm">Site Map</a></p>	
 			<table border="0" cellpadding="4" cellspacing="0" align="center">
               <tbody><tr> 
 			  	
@@ -253,7 +253,7 @@ If you would like to know more about COPPA, please visit the Federal Trade Commi
 			
 
 <p align="center" class="footer">
-All Rights Reserved. Copyright 2016. Panini America, Inc.
+All Rights Reserved. Copyright 2017. Panini America, Inc.
 </p>
 
 <br>
