--- a/x/xi/xil/xilfyhits.com.html
+++ b/x/xi/xil/xilfyhits.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the xilfyhits.com privacy policy that was archived on 2016-11-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161130044117id_/http%3A//xilfyhits.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the xilfyhits.com privacy policy that was archived on 2017-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170604033633id_/http%3A//xilfyhits.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" prefix="og: http://ogp.me/ns#"><head><meta name="msvalidate.01" content="8A1FC9F5FFEE9960D5CC77C54C9B22D9">
     <meta charset="utf-8">
@@ -88,7 +88,7 @@
     </div>
 </div>
     <div align="center">
-       <script data-cfasync="false" type="text/javascript" src="//clksite.com/adServe/banners?tid=115993_258261_2"></script>
+       <!--<script data-cfasync='false' type='text/javascript' src='//clksite.com/adServe/banners?tid=115993_258261_2'></script>-->
     </div>
 <div class="col-xs-12">
     <div class="ultra-feature-container">
@@ -103,12 +103,12 @@
     <div class="col-md-7">
         <div class="footer_menu">
             <ul class="footer_top"><li><a href="http://xilfyhits.com">Home</a></li><li><a href="http://xilfyhits.com/about-us">About</a></li><li><a href="http://xilfyhits.com/contact-us">Contact</a></li></ul>
-            <ul class="footer_bottom"><li><a href="http://xilfyhits.com/terms-and-conditions">Terms &amp; Condition</a></li><li><a href="http://xilfyhits.com/privacy-policy">Privacy Policy</a></li><li><span class="copyright">© 2016 Xilfy.com</span></li></ul>
+            <ul class="footer_bottom"><li><a href="http://xilfyhits.com/terms-and-conditions">Terms &amp; Condition</a></li><li><a href="http://xilfyhits.com/privacy-policy">Privacy Policy</a></li><li><span class="copyright">© 2017 <a href="https://youtube.com">YouTube.com</a>. All Rights Reserved By <a href="https://youtube.com">YouTube.com</a></span></li></ul>
         </div>
     </div>
     <div class="col-md-5">
         <div class="pull-right footer_logo">
-            <a href="http://xilfyhits.com"><img src="http://xilfyhits.com/img/footer_logo.png" alt="Logo"></a>
+            <a href="http://xilfyhits.com"><img src="http://xilfyhits.com/img/footer_logo.png" alt="XilfyHits.com"></a>
         </div>
     </div>
 </div>
@@ -160,6 +160,5 @@
 
     });
 </script>
-<script type="text/javascript" src="//pl8215770.puhtml.com/89/80/b8/8980b8994a0231c7858a2dbeff4203b0.js"></script>
-<script type="text/javascript" src="//clksite.com/adServe/banners?tid=115993_258261_0&amp;type=footer&amp;size=468x60"></script>    
+<script data-cfasync="false" type="text/javascript" src="//p115993.clksite.com/adServe/banners?tid=115993_262103_0&amp;type=footer&amp;size=468x60"></script>    
 </div></body></html>
