abifind.com (archived on 2017-06-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;shopping",
  "char_count": 2847,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.31,
  "homepage_snapshot_redirected_domain": "abifind.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170521024204id_/http://www.abifind.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170521024204id_/http%3A//abifind.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "abifind.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170604041127id_/http%3A//www.abifind.com/policy",
  "policy_title": "Privacy Policy - AbiFind",
  "policy_url": "abifind.com/policy",
  "sha1": "a0d8f3d2d0abc76b85e22b917a6845dade792663",
  "simhash": 709859058508832121,
  "simhash_updated": false,
  "site_hostname": "abifind.com",
  "site_url": "http://abifind.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20170604041127",
  "word_count": 499,
  "year": 2017
}

--- a/a/ab/abi/abifind.com.html
+++ b/a/ab/abi/abifind.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the abifind.com privacy policy that was archived on 2016-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161221054431id_/http%3A//www.abifind.com/policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the abifind.com privacy policy that was archived on 2017-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170604041127id_/http%3A//www.abifind.com/policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" id="abilogic"><head>
   <title>Privacy Policy - AbiFind</title>
@@ -9,7 +9,7 @@
   <meta name="description" content="Privacy Policy of AbiLogic directory">
   <meta name="keywords" content="privacy, policy, URL, directory">
   <meta name="Owner" content="AbiLogic International">
-  <meta name="Copyright" content="Copyright ©2004-2016 AbiLogic International">
+  <meta name="Copyright" content="Copyright ©2004-2017 AbiLogic International">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald:400">
   <link rel="stylesheet" type="text/css" href="http://www.abifind.com/inc/fonts/abilogic-font/css/abilogic-font.css">
@@ -71,7 +71,7 @@
     <div class="search-bar">
      <form id="form_search" data-on="0" name="form_search" method="post" action="/search-post.php">
       <input type="hidden" name="form_type" value="user">
-      <input type="hidden" name="form_init" value="YToyOntzOjU6InZhbHVlIjtzOjEwOiIxNDgyMjk5MDcxIjtzOjM6ImNyYyI7aTotMTY5MTE3MTgyMjt9">
+      <input type="hidden" name="form_init" value="YToyOntzOjU6InZhbHVlIjtzOjEwOiIxNDk2NTQ5NDg3IjtzOjM6ImNyYyI7aTozNjUzMDE3NzIxO30=">
       <input type="text" class="quid" name="form_q_url" value="http://">
       <input type="checkbox" class="quid" name="form_q_accept">
       <table>
@@ -164,14 +164,14 @@
        <a href="http://www.facebook.com/AbilogicDirectory/" rel="nofollow" target="_blank"><img src="/inc/images/icon-r-facebook.png"></a>
        <a href="http://www.twitter.com/AbilogicInt/" rel="nofollow" target="_blank"><img src="/inc/images/icon-r-twitter.png"></a>
       </div>
-      © 2005-2016 Abifind.com. All Rights Reserved. (0.04 sec)
+      © 2005-2017 Abifind.com. All Rights Reserved. (0.04 sec)
      </div>
     </div>
    </div>
    <!-- server information
     HTTP_HOST: www.abifind.com
-    USER_IP: 207.241.229.198
-    USER_AGENT: Mozilla/5.0 (compatible; archive.org_bot +http://www.archive.org/details/archive.org_bot)
+    USER_IP: 54.165.90.203
+    USER_AGENT: ia_archiver
     TIME_BUILD:  (0.04 sec)
    -->
   <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAAAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" class="hload" onload="abi_hvisit()">
